--- a/app/views/examples/links/index.njk
+++ b/app/views/examples/links/index.njk
@@ -17,10 +17,6 @@
   'Muted link': 'govuk-link--muted'
 } %}
 
-{% set modifiers = {
-  'with no underline': 'govuk-link--no-underline'
-} %}
-
 {% set states = {
   'Link': ':link',
   'Visited link': ':visited',
@@ -47,6 +43,10 @@
         (<a class="govuk-link" href="#">Link with surrounding brackets</a>) test that the focus style does not overlap.
       </p>
 
+      <p class="govuk-body">
+        <a class="govuk-link govuk-link--no-underline" href="#">Link with no underline</a>
+      </p>
+
     {% for variant_description, variant_class in variants %}
 
       <section class="govuk-!-margin-top-8">
@@ -58,18 +58,6 @@
             {{ state_description}}
           </a>
         </p>
-      {% endfor %}
-
-        {% for modifier_description, modifier_class in modifiers %}
-        <h3 class="govuk-heading-m">{{ modifier_description }}</h2>
-
-        {% for state_description, state_class in states %}
-          <p class="govuk-body">
-            <a href="/#{{ randomPageHash }}" class="govuk-link {{ variant_class }} {{ modifier_class }} {{ state_class }}">
-              {{ state_description}}
-            </a>
-          </p>
-        {% endfor %}
       {% endfor %}
       </section>
     {% endfor %}
