Explicitly round line height calculations to 5 decimal places
This achieves consistent rendering of line heights across node-sass and dart-sass
which have different default precisions of 5 and 10 respectively.

Fixes #2199

--- a/src/govuk/helpers/_typography.scss
+++ b/src/govuk/helpers/_typography.scss
@@ -78,7 +78,11 @@
 
 @function _govuk-line-height($line-height, $font-size) {
   @if not unitless($line-height) and unit($line-height) == unit($font-size) {
-    $line-height: $line-height / $font-size;
+    // Explicitly rounding to 5 decimal places to match the node-sass/libsass default precision.
+    // This is expanded to 10 in dart-sass and results in significant line height differences
+    // Therefore by rounding it here we achieve consistent rendering across node-sass and dart-sass
+    $ten-to-the-power-five: 100000;
+    $line-height: round(($line-height / $font-size) * $ten-to-the-power-five) / $ten-to-the-power-five;
   }
 
   @return $line-height;
