Set link underline thicknesses in both px and rem
When GOV.UK Frontend is used in compatibility mode alongside GOV.UK Elements, Elements sets the root font size to 10px.

In rem, the thickness of underlines in the hover state with a 10px root font size is 1.875px (10/16ths of 3) rather than 3px and so the hover state does not display correctly.

Include both px and rem, as this means that in situations where the root font size is less than 16px, the value in px will 'win' and so the underlines are displayed correctly.

--- a/src/govuk/settings/_links.scss
+++ b/src/govuk/settings/_links.scss
@@ -11,16 +11,17 @@ $govuk-new-link-styles: false !default;
 
 /// Link underline thickness
 ///
-/// Default is a 1px underline for all links regardless of size, but is defined
-/// in rem so that it scales accordingly if the user has a different root font
-/// size ('zoom text only')
+/// The default is, for a given link, whichever is thicker:
+///  - an absolute 1px underline
+///  - .0625rem, equivalent to 1px but adjusts with the root font size if the
+///.   user has zoomed in 'text only'
 ///
 /// Set to false to disable setting a thickness
 ///
 /// @type Number
 /// @access public
 
-$govuk-link-underline-thickness: .0625rem !default;
+$govuk-link-underline-thickness: unquote("max(1px, .0625rem)") !default;
 
 /// Link underline offset.
 ///
@@ -33,8 +34,10 @@ $govuk-link-underline-offset: .1em !default;
 
 /// Link hover state underline thickness
 ///
-/// Default is, for a given link, whichever is the thicker:
-///  - a 3px underline (defined in rem to scale with the root font size)
+/// The default is, for a given link, whichever is the thicker of:
+///  - an absolute 3px underline
+///  - .1875rem, which equivalent to 3px (at 16px root font size) but adjusts
+///    with the root font size if the user has zoomed in 'text only'
 ///  - .12em relative to the link's text size
 ///
 /// Set to false to disable setting a thickness
@@ -42,4 +45,4 @@ $govuk-link-underline-offset: .1em !default;
 /// @type Number
 /// @access public
 
-$govuk-link-hover-underline-thickness: unquote("max(.1875rem, .12em)") !default;
+$govuk-link-hover-underline-thickness: unquote("max(3px, .1875rem, .12em)") !default;
